--- a/stackfiles/default.yaml
+++ b/stackfiles/default.yaml
@@ -1,14 +1,3 @@
 type: app
-description: Default stackfile usecase description
-# template used to create the project
-template: cloudformation-stack/<template-name>
-inputs:
-  some_input: value
-# list of plugins to be applied after project creation
-plugins:
-  - plugin: cloudformation-stack/<plugin-name>
-    inputs:
-      some_input: value
-      some_list:
-        - item1
-        - item2
+description: Project destined to create a simple yaml file to create the structures ECR, S3 Bucket, Dynamo Table and Lambda Function using the cloudformation tecnology.
+template: cloudformation-stack/cloudformation-stack-template
